# aidebate

./: .codex  .gitignore  CLAUDE.md  CODEX.md  README.md  pyproject.toml
.claude/: settings.json
.claude/commands/: hostile-eyes.md
.claude/hooks/: mark-hostile-eyes.sh  pre-pr-review.sh  python-quality.sh
.claude/rules/: ai-personality.md  core.md  python.md
.github/workflows/: ci.yml  release.yml
doc/: proposed-features.md
scripts/: hostile-eyes  pre-pr-check  restart-server
src/aidebate/: __init__.py  __main__.py  cli.py
src/aidebate/adapters/: claude.yaml  codex.yaml  gemini.yaml
src/aidebate/core/: adapter.py  crossexam.py  debate.py  events.py  pane.py  phases.py  session.py  turn.py  viewer.py  watch.py
src/aidebate/web/: server.py
src/aidebate/web/static/: app.js  index.html  style.css
tests/: conftest.py  test_adapter.py  test_cli_parse.py  test_crossexam.py  test_debate_prompts.py  test_event_buffer.py  test_events.py  test_session_paths.py  test_web_api.py
